# diai

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml
data/: app.db  diagnostic_corpus.json
data/processed/: index.sqlite
frontend/src/: App.tsx  index.css
frontend/src/api/: diagnosis.ts
frontend/src/features/chat/: ChatInput.tsx  ChatMessage.tsx
frontend/src/features/diagnosis/: DiagnosisCard.tsx  DiagnosisList.tsx
frontend/src/types/: index.ts
src/: config.py  main.py  mock_server.py
src/api/: chat_manager.py  router.py
src/api/schemas/: chat_request.py  chat_response.py  diagnosis_result.py
src/data_pipeline/: chunk_corpus.py  clean_corpus.py  filter_chunks.py  filter_diagnostic_chunks.py  load_corpus.py
src/llm/: __init__.py  chat_llm.py  rerank.py  retrieval.py
src/llm/corpus/: __init__.py  parser.py
src/services/: chat_service.py  user_data.py
src/utils/: logger.py
