[project]
name = "diai"
version = "0.1.0"
description = "Diagnosis AI Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "ipykernel>=7.2.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "protobuf>=6.33.5",
    "tiktoken>=0.12.0",
]
