[project]
name = "hack-nu"
version = "0.1.0"
description = "Evaluates solutions on a given dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "pydantic-settings>=2.13.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "protobuf>=6.33.5",
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
]
