[project]
name = "hack-nu"
version = "0.1.0"
description = "Evaluates solutions on a given dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",

    # Pydantic
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # LLM / ML
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.22.0",
    "sentence-transformers>=3.0.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.7.0",

    # Utils
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=7.2.0",
]
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "pydantic-settings>=2.13.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "protobuf>=6.33.5",
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
]
